--- a/our-team.html
+++ b/our-team.html
@@ -25,22 +25,24 @@ permalink: /our-team/
 	<div class="container">
 		<h2>Our team</h2>
 		<!-- <div class="row"> -->
-			<div class="col-sm-6 description-text">
-				<h3>Steve Johnson</h3>
-				<div class="img-wrap1">
-					<img width="100%" src="{{ site.baseurl }}/img/head.jpg" alt="image description">
-				</div>
-				<div style="height:20px;"></div>
-				<p>Steve has been motorcycling and sailing for more than thirty years, including Baja Mexico, BVI and ______ Caribbean etc- rest to come from Steve</p>
+		<div class="col-sm-6 description-text">
+			<h3>Steve Johnson</h3>
+			<div class="img-wrap1">
+				<img width="100%" src="{{ site.baseurl }}/img/head.jpg" alt="image description">
 			</div>
-			<div class="col-sm-6 description-text">
-				<h3>Alex Hamilton</h3>
-				<div class="img-wrap1">
-					<img width="100%" src="{{ site.baseurl }}/img/head.jpg" alt="image description">
-				</div>
-				<div style="height:20px;"></div>
-				<p>Alex, originally from NZ, has sailed in the South Pacific, raced in Africa with a Navy Captain, toured the Pacific Northwest and the Caribbean.  After riding motorbikes for more than three decades, he’s still keen on more.  Alex has instructed road techniques for motorcycles for 10 years for the BC Safety Council, and ridden dirt bikes in NZ, Canada, the US and Indonesia. One of his favourite road trips was New Orleans to Tennessee through Mississippi on the Natchez Trace.</p>
+			<div style="height:20px;"></div>
+			<p>A British. Columbia, Canada native, John has been in law enforcement for 30 years, and is a self-confessed Adventure addict, he has been riding motorbikes and sailing  one for or another since age of 17.</p>
+			<p>His love for adventure has taken him to the clear blue waters of the Caribbean, South America, and the back roads and trails of North America and Mexico by his two favourite  mode of transportation motorcycle and sail boat.</p>
+			<p>After nearly three decades, John enthusiastically brings his extensive operational, experience  and dedication to the Adventurers Guid as a Expedition leader and will be continuing  to share with others so that they may also experience the magnificence of worldwide adventure motorcycle touring, and sailing.</p>
+		</div>
+		<div class="col-sm-6 description-text">
+			<h3>Alex Hamilton</h3>
+			<div class="img-wrap1">
+				<img width="100%" src="{{ site.baseurl }}/img/head.jpg" alt="image description">
 			</div>
+			<div style="height:20px;"></div>
+			<p>Alex, originally from NZ, has sailed in the South Pacific, raced in Africa with a Navy Captain, toured the Pacific Northwest and the Caribbean.  After riding motorbikes for more than three decades, he’s still keen on more.  Alex has instructed road techniques for motorcycles for 10 years for the BC Safety Council, and ridden dirt bikes in NZ, Canada, the US and Indonesia. One of his favourite road trips was New Orleans to Tennessee through Mississippi on the Natchez Trace.</p>
+		</div>
 		<!-- </div> -->
 		
 		<div style="height:20px;"></div>
